@@ -225,11 +225,9 @@ it's only a template design
 /* ----------- Single picture -------------*/
 .ngg-singlepic {
 	background-color:#FFFFFF;
-	border:1px solid #A9A9A9;
 	display:block;  
 	margin:5px;
 	padding:4px;
-	position:relative;
 }
 
 .ngg-left {
@@ -240,7 +238,7 @@ it's only a template design
 	float: right;
 }
 
-.ngg-center img {
+.ngg-center {
   	margin-left: auto;
     margin-right: auto;
 }
