@@ -236,11 +236,9 @@ it's only a template design
 /* ----------- Single picture -------------*/
 .ngg-singlepic {
 	background-color:#FFFFFF;
-	border:1px solid #A9A9A9;
 	display:block;  
-	margin:5px;
+	margin:4px 0px 4px 5px;
 	padding:4px;
-	position:relative;
 }
 
 .ngg-left {
@@ -253,7 +251,7 @@ it's only a template design
 	padding-left:10px;
 }
 
-.ngg-center img {
+.ngg-center {
   	margin-left: auto !important;
     margin-right: auto !important;
 }
