@@ -247,17 +247,11 @@ html>body .ngg-album {
 }
 
 /* ----------- Single picture -------------*/
-.ngg-singlepic-wrapper {
-	padding: 1px;
-}
-
 .ngg-singlepic {
 	background-color:#FFFFFF;
-	border:1px solid #A9A9A9;
 	display:block;  
 	margin:4px 0px 4px 5px;
 	padding:4px;
-	position:relative;
 }
 
 .ngg-left {
@@ -270,7 +264,7 @@ html>body .ngg-album {
 	padding-left:10px;
 }
 
-.ngg-center img {
+.ngg-center {
   	margin-left: auto !important;
     margin-right: auto !important;
 }
